# tickcheck-repo

./: pyproject.toml  requirements.txt
.github/workflows/: main.yml
src/: main.py
src/assets/: stocks.json
